# pupildeconvolve

./: .gitignore  LICENSE  README.md  grand_attention_output.csv  pyproject.toml
examples/: basic_usage.py  test_run.py
pupildeconvolve/: __init__.py  core.py  dataframe.py  kernels.py  optimization.py  plotting.py  utils.py
pupildeconvolve.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_api.py  test_core.py  test_inputs.py
